MBS-10297: Fix history-line and spacing top

--- a/styles.scss
+++ b/styles.scss
@@ -69,6 +69,7 @@ body:not(.block_ai_chat_replacehelp).hasstickyfooter #ai_chat_button {
     .modal-header {
         width: 100%;
         border-bottom: none;
+        padding-bottom: .35rem;
 
         .block_ai_chat-titlearea {
             width: 95%;
@@ -287,7 +288,6 @@ body:not(.block_ai_chat_replacehelp).hasstickyfooter #ai_chat_button {
     }
 
     .gradient-overlay {
-        content: '';
         position: sticky;
         top: 0;
         left: 0;
@@ -578,6 +578,7 @@ body.block_ai_chat_replacehelp {
     display: flex;
     align-items: center;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     gap: 0.5rem;
 
     .block_ai_chat-history-line {
